Enhance Customer Order ingestion
